--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "module-13-challenge-orm",
+    "name": "e-commerce-13",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
@@ -11,7 +11,7 @@
     },
     "repository": {
       "type": "git",
-      "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+      "url": "https://github.com/NatDavies06/E-Commerce-13.git"
     },
     "keywords": [],
     "author": "",
